[gd_scene load_steps=9 format=2]

[ext_resource path="res://TitilliumWeb-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ResultsPage.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.168627, 0.2, 0.258824, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.384314, 0.419608, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.439216, 0.47451, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ResultsPage" type="Control"]
anchor_right = 1.0
margin_bottom = 348.0
script = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="Panel" type="Panel" parent="MarginContainer2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 348.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 5
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 5.0
margin_right = 440.0
margin_bottom = 332.0
custom_constants/separation = 5

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2"]
margin_right = 420.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Testresultater"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2"]
margin_top = 31.0
margin_right = 420.0
margin_bottom = 255.0
custom_constants/separation = 0

[node name="Tag" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_right = 420.0
margin_bottom = 28.0
custom_constants/separation = -1

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/Tag"]
margin_right = 420.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = " 3,875 kg / s"
align = 1

[node name="CriteriaKGS" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 420.0
margin_bottom = 56.0
custom_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaKGS"]
margin_right = 210.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Kriterie lekkasjerate: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaKGS"]
margin_left = 209.0
margin_right = 420.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = " 3,875 kg / s"

[node name="TestKGS" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 420.0
margin_bottom = 84.0
custom_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestKGS"]
margin_right = 210.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Test lekkasjerate: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestKGS"]
margin_left = 209.0
margin_right = 420.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = " 3,875 kg / s"

[node name="CriteriaTime" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 84.0
margin_right = 420.0
margin_bottom = 112.0
custom_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaTime"]
margin_right = 210.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Kriterie 0 bar dp: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaTime"]
margin_left = 209.0
margin_right = 420.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = " 3,875 Sekunder"

[node name="TestTime" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 112.0
margin_right = 420.0
margin_bottom = 140.0
custom_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestTime"]
margin_right = 210.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Test 0 bar dp: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestTime"]
margin_left = 209.0
margin_right = 420.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = " 3,875 Sekunder"

[node name="CriteriaOri" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 140.0
margin_right = 420.0
margin_bottom = 168.0
custom_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaOri"]
margin_right = 210.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Kriterie orifice: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/CriteriaOri"]
margin_left = 209.0
margin_right = 420.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = " 3,875 Sekunder"

[node name="TestOri" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 168.0
margin_right = 420.0
margin_bottom = 196.0
custom_constants/separation = -1

[node name="Name" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestOri"]
margin_right = 210.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Test orifice: "
align = 2

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/TestOri"]
margin_left = 209.0
margin_right = 420.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = " 3,875 Sekunder"

[node name="Accepted" type="HBoxContainer" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 196.0
margin_right = 420.0
margin_bottom = 224.0
custom_constants/separation = -1

[node name="Result" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2/VBoxContainer/Accepted"]
margin_right = 420.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = " Godkjent!"
align = 1

[node name="CSV" type="Button" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2"]
margin_top = 260.0
margin_right = 420.0
margin_bottom = 291.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Lagre som CSV"

[node name="Close" type="Button" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer2"]
margin_top = 296.0
margin_right = 420.0
margin_bottom = 327.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Tilbake"

[connection signal="pressed" from="MarginContainer2/Panel/MarginContainer/VBoxContainer2/CSV" to="." method="store_result_as_csv"]
[connection signal="pressed" from="MarginContainer2/Panel/MarginContainer/VBoxContainer2/Close" to="." method="_on_Close_pressed"]
